Starting Galeria-ex

--- a/public/css/template-verde.css
+++ b/public/css/template-verde.css
@@ -1367,7 +1367,7 @@ main div.container .variacao-module-03 a.outstanding-link .icon-box {
   color: #fff !important;
 }
 main div.container .module-box-01 {
-  padding-bottom: 0;
+  padding-bottom: 2em;
   background: #eeeff2;
   border: 1px solid #c3c0c0;
   -webkit-border-radius: 8px;
