--- a/public/bootstrap/css/bootstrap.css
+++ b/public/bootstrap/css/bootstrap.css
@@ -4024,7 +4024,7 @@ a.thumbnail:focus {
 .media-body {
   overflow: hidden;
   *overflow: visible;
-  zoom: 1;
+  *zoom: 1;
 }
 .media,
 .media .media {
