--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
+@import '/bootstrap/css/bootstrap.min.css';
+@import '/css/template-verde.css';
+@import '/font-awesome/css/font-awesome.min.css';
+@import '/jplayer/skin/portalpadrao01/jplayer.css';
+@import '/css/css_adicional.css';
+
 html,
 body {
   padding: 0;
